# location-intelligence

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: architecture.md  decisions.md  deployment.md
docs/postman/: location_intelligence.postman_collection.json
scripts/: init-db.sql  setup.sh
src/: __init__.py  main.py
src/adapters/: google_geocoding.py  google_places_new.py
src/api/: __init__.py
src/api/v1/: __init__.py  deps.py
src/api/v1/routes/: __init__.py  auth.py  geocode.py  health.py  normalize.py  users.py
src/core/: __init__.py  cache.py  config.py  rate_limit.py  security.py
src/db/: __init__.py  base.py  session.py
src/models/: __init__.py  user.py
src/schemas/: __init__.py  auth.py  geocode.py  normalize.py  user.py
src/services/: __init__.py  auth.py  lis.py  user.py
src/utils/: __init__.py  responses.py
tests/: __init__.py  conftest.py  test_auth.py  test_health.py  test_users.py
